fix layout issue in right pane options

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -211,7 +211,7 @@
     bottom: 120px;
     .options{
       width:100%;
-      margin:0px -100px;
+      margin:0px auto;
     }
   }
 
